[package]
name = "spin-js-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = { version = "1.2.1", features = ["serde"] }
http = "0.2"
quickjs-wasm-rs = { git = "https://github.com/dicej/javy" }
quickjs-wasm-sys = { git = "https://github.com/dicej/javy" }
once_cell = "1.4.0"
spin-sdk = { git = "https://github.com/fermyon/spin" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }
serde = "1.0.137"
serde_bytes = "0.11"
serde_derive = "1.0.137"
